<resources>
    <string name="app_name">PickMall</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account">Have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="size">Size : </string>
    <string name="qty">Qty </string>
    <string name="mobile">Enter your Mobile Number</string>
    <string name="male">Male </string>
    <string name="female">Female </string>
    <string name="gender">Select Your Gender for More Personalized Products </string>
    <!--    <string name="edit_profile">Edit Profile</string>-->
    <!--    <string name="profile">Display Name</string>-->
    <!--    <string name="photo">My Photo</string>-->
    <!--    <string name="sex">Gender</string>-->
    <!--    <string name="mobile_no">Mobile</string>-->
    <!--    <string name="registered">Registered Account</string>-->
    <string name="account_sec">Account Security</string>
    <string name="promt"></string>
    <string name="payment_option">PAYMENT OPTION</string>
    <string name="followers">Followers</string>
    <string name="product">Product</string>


    <string name="photo"> My Photo </string>
    <string name="name"> Display Name </string>
    <string name="registered"> Registered Account </string>
    <string name="mobile_no"> Mobile </string>
    <string name="sex"> Gender </string>
    <string name="profile">Account &amp; Security </string>
    <string name="edit_profile">Edit Profile </string>
    <string name="vendor"> Vendor Request </string>
    <string name="off">% off</string>

    <string name="facebook_app_id">693074284812009</string>
    <string name="fb_login_protocol_scheme">693074284812009</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_friends_earn"><![CDATA[Invite Friends & Earn]]></string>
    <string name="min_10">10 min ago</string>
    <string name="new_dhamaka">new Dhamaka offer</string>
    <string name="resell_payment">Resell Payment</string>
    <string name="free_shipping_for_everything">Free Shipping For Everything</string>
</resources>
