<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.UserDetail">


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progress"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        android:indeterminateTint="@color/colorAccent"
        android:layout_centerInParent="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:id="@+id/mainview"
        android:orientation="vertical"
        android:layout_height="match_parent">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <tech.iwish.pickmall.extended.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="17dp"
            app:fonttype="regular"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/mobile"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:backgroundTint="@color/tint"
            android:hint="Mobile"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">



        <tech.iwish.pickmall.extended.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="17dp"
            app:fonttype="regular"
            android:textColor="@color/black"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:id="@+id/male"
                android:tag="male"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/male_icon"/>


                <tech.iwish.pickmall.extended.TextViewFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="17dp"
                    app:fonttype="regular"
                    android:textColor="@color/black"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/female"
                android:tag="female"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/female_icom"/>


                <tech.iwish.pickmall.extended.TextViewFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="17dp"
                    app:fonttype="regular"
                    android:textColor="@color/black"
                    />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/next"
            android:src="@drawable/next_button_icon"/>


    </LinearLayout>


    </LinearLayout>

</RelativeLayout>